[package]
name = "lamport_sigs"
version = "0.3.1-pre"
authors = ["Frederic Jacobs <github@fredericjacobs.com>"]
description = "lamport_sigs is a Rust implementation of the Lamport one-time signature scheme."
license = "BSD-3-Clause"
documentation = "https://spinresearch.github.io/lamport.rs/lamport/index.html"
homepage = "https://github.com/SpinResearch/lamport.rs"
repository = "https://github.com/SpinResearch/lamport.rs"
keywords = ["lamport", "signature-scheme"]
categories = ["cryptography", "algorithms"]
readme = "README.md"

[dependencies]
ring = "^0.11.0"
rand = "^0.3.0"
